--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -5,12 +5,38 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <%= link_to 'About', home_about_path, class: "nav-link active" %>
+          <%= link_to 'About', home_about_path, class: "nav-link" %>
         </li>
+        
+        <li class="nav-item">
+          <%= link_to 'Friends', friends_path, class: "nav-link" %>
+        </li>
+
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'Add Friend', new_friend_path, class: "nav-link" %>
+          </li>
+        
+          <li class="nav-item">
+            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+          </li>
+        
+          <li class="nav-item">
+            <%= link_to 'Edit Profile', edit_user_registration_path, class: "nav-link" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Sign Up', new_user_registration_path, class: "nav-link" %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to 'Sign In', new_user_session_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
-      <form class="d-flex">
+      <form class="form-inline my-2 my-lg-0">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
