--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -1,7 +1,11 @@
-<h1>Editing Friend</h1>
-
-<%= render 'form', friend: @friend %>
-
-<br>
-<%= link_to 'Show', @friend, class: 'btn btn-secondary' %>
-<%= link_to 'Back', friends_path, class: 'btn btn-dark' %>
+<div class="card">
+	<div class="card-header">
+		<h4>Editing Friend</h4>
+	</div>
+	<div class="card-body">
+		<%= render 'form', friend: @friend %>
+		<br>
+		<%= link_to 'Show', @friend, class: 'btn btn-secondary' %>
+		<%= link_to 'Back', friends_path, class: 'btn btn-dark' %>
+	</div>
+</div>
