--- a/app/views/friends/new.html.erb
+++ b/app/views/friends/new.html.erb
@@ -1,6 +1,11 @@
-<h1>New Friend</h1>
+<div class="card">
+	<div class="card-header">
+		<h4>Add New Friend</h4>
+	</div>
+	<div class="card-body">
+		<%= render 'form', friend: @friend %>
+		<br>	
+		<%= link_to 'Back', friends_path, class: 'btn btn-dark' %>
+	</div>
+</div>
 
-<%= render 'form', friend: @friend %>
-
-<br>
-<%= link_to 'Back', friends_path, class: 'btn btn-dark' %>
